// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Picker Styles image-navigator DragZone is dropping file 1`] = `
[
  null,
  <div
    class="_1yt41q64 _2rko1rr0 _v5641ggo _1bsbuuw1 _4t3iuuw1 _1e0c1txw _2lx21bp4 _4cvr1h6o _1bah1h6o _kqswh2mm _re8d1dpy _14mj1rr0 _qc5o1qgh _aetrb3bt _18postnw _15l2idpf _19doidpf _z0ai1osq _1qdg1osq _bfhk1iy1 _8l3m1lp0 _19ohtakz _kwc012me _18lgp3kn _18f312c5 _39yq1dm9 _1tv3gq9o"
    data-testid="dragzone"
  />,
]
`;

exports[`Avatar Picker Styles image-navigator DragZone is not dropping file 1`] = `
[
  null,
  <div
    class="_1yt41q64 _2rko1rr0 _v5641ggo _1bsbuuw1 _4t3iuuw1 _1e0c1txw _2lx21bp4 _4cvr1h6o _1bah1h6o _kqswh2mm _re8d1dpy _14mj1rr0 _qc5o1qgh _aetrb3bt _18postnw _15l2idpf _19doidpf _z0ai1osq _1qdg1osq _39yq1dm9 _1tv3gq9o _8l3m1lp0"
    data-testid="dragzone"
  />,
]
`;
